--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/chris93007/DroneDeliveryChallenge#readme",
   "dependencies": {
+    "async": "^2.6.1",
     "fs": "0.0.1-security",
     "readline": "^1.3.0"
   }
