--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "async": "^2.6.1",
     "fs": "0.0.1-security",
+    "moment": "^2.22.2",
     "readline": "^1.3.0"
   }
 }
